Fix positioning on iOS

--- a/assets/css/glide.theme.css
+++ b/assets/css/glide.theme.css
@@ -67,13 +67,13 @@
     cursor: -webkit-grabbing; }
 
 
-  .slide-txt {
+  .glide__slides p.slide-txt {
     position: relative;
-    bottom: 80%;
+    top: -85%;
     left: 20px;
   }
 
-  .glide__slide img {
+  .glide__slides img {
     object-fit: cover;
     height: 360px;
     border-radius: 10px;
